--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "consign": "^0.1.6",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "path": "^0.12.7"
   },
